--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
     <head>
         <link rel="stylesheet" href="https://use.typekit.net/awp8son.css">
         <link rel="stylesheet" href="styles.css">
-        <div class="about-div">
+        <div class="about-me">
+            <h1>about me</h1>
+        </div>
+        <div class="about-img">
             <img src="images/headshot.jpeg" width="175" height="250">
         </div>
     </head>
