Front page essentially done, with placeholder images. Added hover effects. Added placeholder paragraph in about page.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,31 @@
     <link rel="stylesheet" href="https://use.typekit.net/awp8son.css">
     <link rel="stylesheet" href="styles.css">
     <head>
-        <div class="top-header" style="margin: 0">
-            <img src="images/LogoAttempt.png" width="100" height="100">
-            <h1>Sangeda Alin</h1>
-            <div class="top-menu" style="margin: 0">
-                <a href="about.html">about</a>
-                <a href="https://www.linkedin.com/in/sangeda-a-4b21bbb5/">linkedin</a>
-                <a href="resume.pdf">resume</a>
+            <div class="top-header">
+                <img id="logo-img" src="images/LogoAttempt.png" width="100" height="100">
+                <h1>Sangeda Alin</h1>
+                <div class="top-menu" style="margin: 0">
+                    <a href="about.html">about</a>
+                    <a href="https://www.linkedin.com/in/sangeda-a-4b21bbb5/">linkedin</a>
+                    <a href="resume.pdf">resume</a>
+                </div>
+            </div>
+    </head>
+    <body>
+        <div id="hr-div"><hr></div>
+        <div class="portfolio-images">
+            <div class="video-btn">
+                <a href="videowork.html">
+                    <img src="images/wernerherzog.jpg" width="500" height="200">
+                    <div class="overlay"></div>
+                </a>
+            </div>
+            <div class="writing-btn">
+                <a href="writingwork.html">
+                    <img src="images/hero_Big-Lebowski-image.jpg" width="500" height="200">
+                    <div class="overlay"></div>
+                </a>
             </div>
         </div>
-    </head>
+    </body>
 </html>
