--- a/about.html
+++ b/about.html
@@ -12,7 +12,12 @@
     </head>
     <body>
         <div id="about-paragraph">
-            <p id="about-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p id="about-p">
+
+                <p>Sangeda Alin is a storyteller, video editor, journalist, and avid media consumer. She graduated from Hunter College in 2019 with a degree in Media Studies focusing on Journalism. Her work has been featured at HBO, the WORD, and Hunter News Now. She is passionate about documentary filmmaking. Her focuses include gentrification, streetwear fashion, and the South Asian discourse. She hopes to create conversation inducing media. </p>
+            <p>In the mood to watch a documentary? Sangeda will most definitely create an exhaustive list with never-ending film recommendations.
+            Feel free to <a href = "mailto: sangedaalin@gmail.com">email</a> or follow Sangeda on Instagram <a href="https://www.instagram.com/groovysang "> @groovysang </a> (it is quite the groovy feed.)
+            </p>
         </div>
     </body>
 </html>
