kinda did the video portfolio page

--- a/videowork.html
+++ b/videowork.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <h1>Video Work</h1>
+        <link rel="stylesheet" href="https://use.typekit.net/awp8son.css">
+        <link rel="stylesheet" href="styles.css">
+        <div class="portfolio-header">
+            <a href="index.html">
+                <img src="images/LogoAttempt.png" width="100" height="100">
+            </a>
+            <h1>Video  Work</h1>
+        </div>
     </head>
     <body>
-             <a href="https://vimeo.com/user42286826"> Vimeo </a> <br>
-             <a href="https://www.youtube.com/channel/UC1TbsnAkI0unck2cvl6W1bA?view_as=subscriber"> YouTube </a>
+        <div id="video-hr-div"><hr></div>
+        <div id="vimeo-link">
+            <img src="images/vimeo-logo.png" width="139" height="120">
+            <a href="https://vimeo.com/user42286826"> 
+                <h4>Go to my Vimeo</h4>
+            </a>
+        </div>
+        <div id="youtube-link">
+            <img src="images/youtube-logo.png" width="170" height="120">
+            <a href="https://www.youtube.com/channel/UC1TbsnAkI0unck2cvl6W1bA?view_as=subscriber">
+                <h4>Go to my Youtube</h4>
+            </a>
+        </div>
+             
     </body>
 </html>
