--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <div class="portfolio-images">
             <div class="video-btn">
                 <a href="videowork.html">
-                    <img src="images/videowork.jpg" width="550" height="400">
+                    <img src="images/videowork.jpg" alt="Video Work" width="550" height="400">
                     <div class="overlay"></div>
                 </a>
             </div>
             <div class="writing-btn">
                 <a href="writingwork.html">
-                    <img src="images/writtenwork.jpg" width="500" height="400">
+                    <img src="images/writtenwork.jpg" alt="Written Work" width="500" height="400">
                     <div class="overlay"></div>
                 </a>
             </div>
