changed the buttons in the videowork page

--- a/videowork.html
+++ b/videowork.html
@@ -15,13 +15,13 @@
         <div id="vimeo-link">
             <img src="images/vimeo-logo.png" width="139" height="120">
             <a href="https://vimeo.com/user42286826"> 
-                <h4>Go to my Vimeo</h4>
+                <h4>Vimeo</h4>
             </a>
         </div>
         <div id="youtube-link">
             <img src="images/youtube-logo.png" width="170" height="120">
             <a href="https://www.youtube.com/channel/UC1TbsnAkI0unck2cvl6W1bA?view_as=subscriber">
-                <h4>Go to my Youtube</h4>
+                <h4>Youtube</h4>
             </a>
         </div>
              
