--- a/about.html
+++ b/about.html
@@ -4,13 +4,17 @@
         <link rel="stylesheet" href="https://use.typekit.net/awp8son.css">
         <link rel="stylesheet" href="styles.css">
         <div class="about-me">
-            <h1>about me</h1>
+            <a href="index.html">
+                <img src="images/LogoAttempt.png" width="100" height="100">
+            </a>
+            <h1>About Me</h1>
         </div>
         <div class="about-img">
-            <img src="images/headshot.jpeg" width="175" height="250">
+            <img src="images/headshot.jpeg" width="200" height="285">
         </div>
     </head>
     <body>
+        <div id="about-hr"><hr></div>
         <div id="about-paragraph">
             <p id="about-p">
 
