--- a/videowork.html
+++ b/videowork.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
         <div class="portfolio-header">
             <a href="index.html">
-                <img src="images/LogoAttempt.png" width="100" height="100">
+                <img id="portfolio-img" src="images/LogoAttempt.png" width="100" height="100">
             </a>
             <h1>Video  Work</h1>
         </div>
