--- a/writingwork.html
+++ b/writingwork.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <h1>Video Work</h1>
+            <h1>Written Work</h1>
     </head>
     <body>
              <a href="https://vimeo.com/user42286826"> Vimeo </a> <br>
