--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
             <div class="top-header">
                 <img id="logo-img" src="images/LogoAttempt.png" width="100" height="100">
-                <h1>Sangeda Alin</h1>
+                <h1 id="name-head">Sangeda Alin</h1>
                 <div class="top-menu" style="margin: 0">
                     <a href="about.html">about</a>
                     <a href="https://www.linkedin.com/in/sangeda-a-4b21bbb5/">linkedin</a>
@@ -22,9 +22,12 @@
                     <div class="overlay"></div>
                 </a>
             </div>
-            <div class="writing-btn">
-                <a href="writingwork.html">
-                    <img src="images/writtenwork.jpg" alt="Written Work" width="500" height="400">
+        </div>
+        <div id="extra-hr-div"><hr></div>
+        <div class="extras">
+            <div class="extra-btn">
+                <a href="http://hunterword.com/index.php/author/sangeda-alin/">
+                    <img src="images/writtenwork.jpg" alt="Extra Work" width="550" height="400">
                     <div class="overlay"></div>
                 </a>
             </div>
